# pravni-kvalifikator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
docs/: technicka-dokumentace.md
scripts/: generate_embeddings.py  generate_metadata.py  load_laws.py
src/pravni_kvalifikator/agents/: activity.py  head_classifier.py  law_identifier.py  orchestrator.py  paragraph_selector.py  qualifier.py  reviewer.py  special_law_checker.py  state.py
src/pravni_kvalifikator/mcp/: db.py  embedder.py  indexer.py  main.py  parser.py  registry.py  scraper.py  server.py
src/pravni_kvalifikator/shared/: config.py  llm.py  mcp_client.py
src/pravni_kvalifikator/web/: auth.py  main.py  models.py  routes.py  session.py
src/pravni_kvalifikator/web/static/: app.js  style.css
src/pravni_kvalifikator/web/templates/: base.html  index.html  login.html  result.html
tests/: conftest.py  scenarios.py  test_agents.py  test_auth.py  test_config.py  test_data.txt  test_db.py  test_db_vec.py  test_e2e.py  test_embedder.py  test_indexer.py  test_llm.py  test_mcp_client.py  test_mcp_tools.py  test_parser.py  test_scraper.py  test_session.py  test_web.py
tests/fixtures/: zakon_251_2016_sample.html  zakon_40_2009_sample.html
