[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pravni-kvalifikator"
version = "0.1.0"
description = "LLM agent system for legal qualification of criminal acts"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "mcp>=1.0",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "openai>=1.50",
    "sqlite-vec>=0.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0",
    "tiktoken>=0.7",
]

[project.scripts]
pq-mcp = "pravni_kvalifikator.mcp.main:main"
pq-web = "pravni_kvalifikator.web.main:main"
pq-token = "pravni_kvalifikator.web.auth:main_cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
